[package]
name = "yui"
version = "0.1.0"
authors = ["rayes <70722312+rayes0@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
rustyline = "8.0.0"
rustyline-derive = "0.4.0"
regex = "1"
lazy_static = "1.4.0"
